# otto

./: Cargo.toml  README.md  args.yml  convo-w-chatgpt3.md
benches/: README.md
docs/: convo-w-chatgpt1.md  convo-w-chatgpt2.md
examples/: ex1.yml
examples/ex1/: otto.yml
examples/ex2/: .otto.yml
examples/ex3/: otto.yaml
examples/ex4/: otto.yml
examples/ex5/: otto.yml
examples/old/ex1/: otto.yml
examples/old/ex3/: otto.yaml
src/: lib.rs  main.rs
src/cfg/: config.rs  error.rs  load.rs  loader.rs  mod.rs  otto.rs  param.rs  spec.rs  task.rs
src/cli/: error.rs  macros.rs  mod.rs  parse.rs  parse2.rs  parser.rs  parser.rs.old  parser2.rs
src/cmd/: error.rs  mod.rs  scheduler.rs
