[package]
name = "otto"
version = "0.1.0"
edition = "2021"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]

[lib]
name = "otto"
path = "src/lib.rs"

[[bin]]
name = "otto"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cached = "0.34.0"
# anyhow = "1.0.32"
thiserror = "1.0.20"
clap = "3.1.3"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
serde_yaml = "0.8"
expanduser = "1.2.2"
eyre = "0.6.8"
array_tool = "1.0.3"
num_cpus = "1.15.0"
