[package]
name = "otto"
version = "0.1.0"
edition = "2021"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]

[lib]
name = "otto"
path = "src/lib.rs"

[[bin]]
name = "otto"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
clap = { version = "4.3.0", features = ["string"] }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
serde_yaml = "0.9.21"
expanduser = "1.2.2"
eyre = "0.6.8"
array_tool = "1.0.3"
num_cpus = "1.15.0"
daggy = "0.8.0"
thiserror = "1.0.40"
rayon = "1.7.0"
