[package]
name = "otto"
version = "0.1.0"
edition = "2021"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]

[lib]
name = "otto"
path = "src/lib.rs"

[[bin]]
name = "otto"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
clap = { version = "4.5.23", features = ["string"] }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4.22", features = ["std", "serde"] }
serde_yaml = "0.9.34"
expanduser = "1.2.2"
eyre = "0.6.12"
array_tool = "1.0.3"
num_cpus = "1.16.0"
daggy = "0.8.0"
rayon = "1.10.0"
sha2 = "0.10.8"
hex = "0.4.3"
once_cell = "1.20.2"
thiserror = "2.0.9"
